@@ -1,23 +1,23 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
+DIST muttvcardsearch-1.10.tar.gz 26298 SHA256 6014e4ccef00bd329cc9cfe8c8a94f9ecdb5167883bde4577816fcdfcd104f17 SHA512 bc4240616790d1bf8140bff290a61148c0cbee63358ee22b346320987c715c64a57998bd820e898bb21008f711fa90fc4d6c65b0cf12e7b088591da12dc39d3b WHIRLPOOL eef9710c154d3ef357320ec41c95dc2916eaab3d150a63c349c0cf57b92ae3c76daeea63df8f599fc5f8d68961a148051e4a2073eccfeb199e5542deb14d5c93
 DIST muttvcardsearch-1.9.tar.gz 26132 SHA256 4c099938dd02f577d8289bbc5e82f0af6f290a564a30f6fdcb5cc880cd02fc8d SHA512 b9247f84a0a21ff3dfcbdade9a9946949a414a1f88584f52cb51bf9be1f12042b3a2275d0f6fc4cf7a3c0dd09f0839f145859300d64cac0e8181a1ea9a1dc7d1 WHIRLPOOL 6460be7024460f36cf590feb20bb4011b58bbec13da3237bf4b19f52e6a3d45ee1b8f852c02ae7ff2a606381092792cdadeab8a4bb18110e28925c0236360759
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2
 
-iQJ8BAEBCABmBQJUZiBdXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAw
-MDAwMDAwMDAwMDAwMDAwAAoJEC8E4x8HIB59p+kP/3y83lDByi4K01Mipr3rvtEg
-8pjRxCQDF77ctoUQpR/i/yBI/e/VFWRxbaA6a5OoeWggTstB1YqKr1BoheqnEGKg
-teyp2vFiZOWbE6EJ1U63qwBBHZTX7BhWH0uN0Y9TGX1S6gYmG6UPyKTt7LXGmy0+
-3i2ldXG1DsSD99NFC9Y/hHvI7rbo/9kTTkxzQ4ArCvNypcCUd2Gw+rdih6Z82x8b
-O4uyExZ6C68PWusgVN8zBkikeUUqUigq6C+8th9MYQ+N+QfzMRzgHSu6YBFZVuDf
-G0Gki9IMl15QGKpocmBz1DLbvtHkH6TcB6IrTBtZtCCF9wJ540rJo8mBq06Ikpce
-C4yUrWI2OQ73wggTWZw6IAQjRzoXQQrIcLYc4tThwI40Wmk0u0uIsE+UQmYYeqQw
-phIGmzD2213OOjtEPdZxzwgPltpzXnFzOKHhithqMU+mb0ADeZiETgIW1IL6gTn1
-TwI6riKRDmxwIUT3uaFYYk0zhHHxjLjMfmZU2NuhhbvtJlK/MfebgUCbvI7eIIph
-8CCaslNj6C9lb8A+r92NBS/07HdskH9b/Gq8HD0dBwzruMaQAaNZMbglQPcjiTI1
-wUDjGEsBSZ/DXb1O/LDdNNnX5376X966o4lZQXYOhuN069n3gi6d7oAX1QEv+/B0
-Y+lG8+phUYmqF/0CzB28
-=lOkV
+iQKTBAEBCAB9FiEERMkDQjkszrVa22ISLwTjHwcgHn0FAliB5VdfFIAAAAAALgAo
+aXNzdWVyLWZwckBub3RhdGlvbnMub3BlbnBncC5maWZ0aGhvcnNlbWFuLm5ldDQ0
+QzkwMzQyMzkyQ0NFQjU1QURCNjIxMjJGMDRFMzFGMDcyMDFFN0QACgkQLwTjHwcg
+Hn2aFhAA1UhW9lCc7jo1doESVAESdzFZTnVr/3VgVQ9s/O8q+K93IurBYveRFF8G
+VAaS1/8J+UoPzkTTjclCoZm29CV7kh/55VuEl5oPriwe7BeqVCP5k5o/OLKstv9P
+SaRG8H4KUDAU8NHP92ycLhRjaLvnXeWqlbA+z1R3nYsylReFbT33ZrgbMq4MHvBL
+Bj9yYe/YO2pbMrRtt0PDxWR5ritTLglcBhiJQCAvVeUoMU6y8VbIKPe+9pgBFiCW
+o7S9zzJLzCq8+f9K0ZQRmnhFeeWNkCnMWqGo20imrGuZ2rnozl6KSyWV4B53P/Qm
+M48foQYPZpYqHPd9WHARtm88YV5fXLsNqeZUkBjEN18xI9q39KQ7ldpbGFkVKg6j
+QivW8vk+sFeeV60yanlEtRtA9I9AajeugIFHXiPpxiJsOCoOanGgLZZ1E50VdEek
+rWD/g2XSjUolNIRc7tPXVlnLcmzHgrzHxtQn5EK6ncvmSCcHmCa3I3hf6nwfIzPY
+aAvUlCbbZJ3lI38ZYyejlYyE1JDFbJOhUaL1E700cU79AxYtn3gkZSfjJ9d8Qrp1
+IqLdeyS/ujuKKLoUWWqb30Ify//oYx5skpl2tQclsj7dr7CuQiIhnwYsiKm7sIEY
+hZrTd6Y5C4m2NYwV2ngE66u6hD16iF0YJU7FV0Cx7k9Gzg7mZdo=
+=wnxU
 -----END PGP SIGNATURE-----
